--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@ mlruns/
 
 # exclude Püntener datasets
 Püntener_Classification/data/
+
+#exclude notebook outputs
+notebooks/.ipynb_checkpoints
+notebooks/Data_Cleaning/
+notebooks/Exploring_Dataset
+notebooks/Feature_Importance
+notebooks/Peak_Feature_Extraction
+notebooks/Puentener2023_DataCode
+notebooks/Püntener
