--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "iav_classification"
+name = "IAV_Classification"
 version = "0.0.1"
 description = "Add your description here"
 authors = [
@@ -15,7 +15,6 @@ dependencies = [
     "mlflow>=3.2.0",
     "notebook>=7.4.4",
     "openpyxl>=3.1.5",
-    "perun>=0.9.0",
     "pydot>=4.0.1",
     "seaborn>=0.13.2",
     "tensorflow>=2.19.0",
@@ -30,8 +29,8 @@ dependencies = [
 package = true
 
 [tool.setuptools]
-packages = ['iav_classification']
+packages = ['IAV_Classification']
 
 [project.scripts]
-app = "iav_classification.main:app"
-create-test-set = "iav_classification.data:app"
+app = "IAV_Classification.main:app"
+create-test-set = "IAV_Classification.data:app"
